# rust-web-app-demo

./: .env  Cargo.toml  README.md  Shuttle.toml  docker-compose.yml
migrations/: 20240407214440_create-subscriber-table.sql
src/: config.rs  lib.rs  main.rs  model.rs
src/routes/: index.rs  mod.rs  send.rs  subscribe.rs
templates/: index.html  newsletter.html
